# package_creation_tutorial

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  setup.py
package_creation_tutorial/: .coverage  pyproject.toml
package_creation_tutorial/tests/: test_string_ops.py
src/package_creation_tutorial/: __init__.py  main.py  string_ops.py
