[project]
name = "package-creation-tutorial"
version = "0.1.0"
description = ""
authors = [
    {name = "kamel",email = "mohamedihsen81@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]

[tool.poetry]
packages = [{include = "package_creation_tutorial", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
