[project]
name = "package-creation-tutorial"
version = "0.1.0"
description = ""
authors = [
    {name = "kamel",email = "mohamedihsen81@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ruff (>=0.9.2,<0.10.0)",
    "pre-commit (>=4.0.1,<5.0.0)"
]

[tool.poetry]
packages = [{include = "package_creation_tutorial", from = "src"}]


[tool.poetry.group.dev.dependencies]
ruff = "^0.9.2"
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
extend-ignore = ["F401"]

